# sec_bot

src/ball_tracker/: package.xml  setup.py
src/ball_tracker/ball_tracker/: follow_ball.py  image_publisher.py
src/ball_tracker/config/: stereo.yaml
src/ball_tracker/launch/: follow_ball.launch.py  orb_slam3_stereo.launch.py  sim_cam.launch.py
src/ros2_orb_slam3/: CMakeLists.txt
src/ros2_orb_slam3/include/ros2_orb_slam3/: common.hpp
src/ros2_orb_slam3/src/: common.cpp  stereo_node.cpp
src/sec_bot/: CMakeLists.txt
src/sec_bot/description/: ground_plane.xacro  robot_core.xacro
src/sec_bot/launch/: ball_tracker_launch.py  launch_sim.launch.py
src/sec_bot/worlds/: custom_empty.world  ground_plane.sdf  purple_ball.world
